Solving issues on small and touchscreen devices: rewriting js code to make the click functions work on touch screens, updating page layouts and sizes to look good on small screens, making the footer 100vw to avoid overflow-x issues (scrolling side-to-side), updating the styling on the landing page, to fix the scaling issue that followed from adding a link to the #landingPage element, making the Portfolio page buttons smaller on small screens, making the contact icon row wider on small screen, to ensure they are still round. Updating reset.css to remove default styling of button elements.

--- a/public/landingPage.css
+++ b/public/landingPage.css
@@ -1,6 +1,6 @@
 #landingPage {
-  height: 100vh;
-  width: 100vw;
+  /*height: 100vh;
+  width: 100vw;*/
   background-color: #111;
   background-image: url("images/chalkboard.jpg");  /* Chalkboard image downloaded from Foolish Fire: https://www.foolishfire.com/2012/09/11/free-downloadable-chalkboard-backgrounds/ */
   background-size: cover;
@@ -17,9 +17,14 @@
   text-align: center;
 }
 
-#landingPage a {
-  height: inherit;
-  width: inherit;
+a {
+  height: 100vh;
+  width: 100vw;
+}
+
+svg {
+  height: 100vh;
+  width: 100vw;
 }
 
 /* ///////// ///////// ///////// ///////// ///////// ///////// /////////
@@ -28,8 +33,6 @@
 
 @media screen and (max-width: 450px) {
   #landingPage {
-    height: 100%;
-    width: 100%;
     overflow: hidden;
   }
 }
